fixed z-index of close btn

--- a/src/components/jdClose/closeStyles.module.scss
+++ b/src/components/jdClose/closeStyles.module.scss
@@ -20,4 +20,5 @@
     }
     @include baseShadow;
     @include baseBlur;
+    z-index: 3;
 }
